@@ -5,7 +5,6 @@ import com.github.sibmaks.sp.api.request.*;
 import com.github.sibmaks.sp.api.response.CreateRoomResponse;
 import com.github.sibmaks.sp.api.response.GetRoomResponse;
 import com.github.sibmaks.sp.api.response.JoinRoomResponse;
-import com.github.sibmaks.sp.api.response.StandardResponse;
 import com.github.sibmaks.sp.conf.DataSourceStub;
 import com.github.sibmaks.sp.domain.*;
 import com.github.sibmaks.sp.exception.NotFoundException;
@@ -14,10 +13,8 @@ import com.github.sibmaks.sp.exception.ValidationErrorException;
 import com.github.sibmaks.sp.service.RoomService;
 import com.github.sibmaks.sp.service.SessionService;
 import com.github.sibmaks.sp.service.UserService;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
@@ -30,6 +27,9 @@ import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.when;
+
 /**
  * @author drobyshev-ma
  * Created at 19-01-2022
@@ -37,7 +37,7 @@ import java.util.UUID;
 @Import(DataSourceStub.class)
 @ActiveProfiles("test")
 @ContextConfiguration
-@SpringBootTest(webEnvironment= SpringBootTest.WebEnvironment.RANDOM_PORT)
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 class RoomControllerTest {
     @MockBean
     private RoomService roomService;
@@ -51,280 +51,292 @@ class RoomControllerTest {
     @Test
     @DisplayName("Successfully create room without secret")
     void testCreateRoomWithoutSecret() {
-        String name = UUID.randomUUID().toString();
-        List<Integer> roles = Collections.singletonList(1);
-        int days = 5;
-        int roleId = 1;
-        int roomId = 123;
+        var name = UUID.randomUUID().toString();
+        var roles = List.of(1);
+        var days = 5;
+        var roleId = 1;
+        var roomId = 123;
 
-        String sessionId = mockSession(123);
-        User user = mockUser(123);
+        var sessionId = mockSession(123);
+        var user = mockUser(123);
 
-        Room room = new Room();
+        var room = new Room();
         room.setId(roomId);
 
-        Mockito.when(roomService.createRoom(user, name, null, roles, days, roleId)).thenReturn(room);
+        when(roomService.createRoom(user, name, null, roles, days, roleId))
+                .thenReturn(room);
 
-        StandardResponse standardResponse = controller.createRoom(sessionId, new CreateRoomRequest(name, null, roles, days, roleId));
-        Assertions.assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
-        Assertions.assertInstanceOf(CreateRoomResponse.class, standardResponse);
+        var rq = new CreateRoomRequest(name, null, roles, days, roleId);
+        var standardResponse = controller.createRoom(sessionId, rq);
+        assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
 
-        CreateRoomResponse createRoomResponse = (CreateRoomResponse) standardResponse;
-        Assertions.assertEquals(roomId, createRoomResponse.getRoomId());
+        var createRoomResponse = assertInstanceOf(CreateRoomResponse.class, standardResponse);
+        assertEquals(roomId, createRoomResponse.getRoomId());
     }
 
     @Test
     @DisplayName("Unauthorized create room without secret")
     void testCreateRoomWithoutSecret_unauthorized() {
-        String name = UUID.randomUUID().toString();
-        List<Integer> roles = Collections.singletonList(1);
-        int days = 5;
-        int roleId = 1;
+        var name = UUID.randomUUID().toString();
+        var roles = List.of(1);
+        var days = 5;
+        var roleId = 1;
 
-        String sessionId = UUID.randomUUID().toString();
-        Mockito.when(sessionService.getSession(sessionId)).thenThrow(new NotFoundException());
+        var sessionId = UUID.randomUUID().toString();
+        when(sessionService.getSession(sessionId))
+                .thenThrow(new NotFoundException());
 
-        CreateRoomRequest request = new CreateRoomRequest(name, null, roles, days, roleId);
-        Assertions.assertThrows(UnauthorizedException.class, () -> controller.createRoom(sessionId, request));
+        var request = new CreateRoomRequest(name, null, roles, days, roleId);
+        assertThrows(UnauthorizedException.class, () -> controller.createRoom(sessionId, request));
     }
 
     @Test
     @DisplayName("Successfully create room with secret")
     void testCreateRoomWithSecret() {
-        String name = UUID.randomUUID().toString();
-        List<Integer> roles = Collections.singletonList(1);
-        String secret = "1234";
-        int days = 5;
-        int roleId = 1;
-        int roomId = 123;
+        var name = UUID.randomUUID().toString();
+        var roles = Collections.singletonList(1);
+        var secret = "1234";
+        var days = 5;
+        var roleId = 1;
+        var roomId = 123;
 
-        String sessionId = mockSession(123);
-        User user = mockUser(123);
+        var sessionId = mockSession(123);
+        var user = mockUser(123);
 
-        Room room = new Room();
+        var room = new Room();
         room.setId(roomId);
 
-        Mockito.when(roomService.createRoom(user, name, secret, roles, days, roleId)).thenReturn(room);
+        when(roomService.createRoom(user, name, secret, roles, days, roleId))
+                .thenReturn(room);
 
-        StandardResponse standardResponse = controller.createRoom(sessionId, new CreateRoomRequest(name, secret, roles, days, roleId));
-        Assertions.assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
-        Assertions.assertInstanceOf(CreateRoomResponse.class, standardResponse);
+        var standardResponse = controller.createRoom(sessionId, new CreateRoomRequest(name, secret, roles, days, roleId));
+        assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
 
-        CreateRoomResponse createRoomResponse = (CreateRoomResponse) standardResponse;
-        Assertions.assertEquals(roomId, createRoomResponse.getRoomId());
+        var createRoomResponse = assertInstanceOf(CreateRoomResponse.class, standardResponse);
+        assertEquals(roomId, createRoomResponse.getRoomId());
     }
 
     @Test
     @DisplayName("Got exception when create room with short secret")
     void testCreateRoomWithShortSecret() {
-        String name = UUID.randomUUID().toString();
-        List<Integer> roles = Collections.singletonList(1);
-        String secret = "123";
-        int days = 5;
-        int roleId = 1;
+        var name = UUID.randomUUID().toString();
+        var roles = Collections.singletonList(1);
+        var secret = "123";
+        var days = 5;
+        var roleId = 1;
 
-        String sessionId = mockSession(123);
-        User user = mockUser(123);
+        var sessionId = mockSession(123);
+        var user = mockUser(123);
 
-        Room room = new Room();
+        var room = new Room();
 
-        Mockito.when(roomService.createRoom(user, name, secret, roles, days, roleId)).thenReturn(room);
+        when(roomService.createRoom(user, name, secret, roles, days, roleId))
+                .thenReturn(room);
 
-        CreateRoomRequest request = new CreateRoomRequest(name, secret, roles, days, roleId);
-        Assertions.assertThrows(ValidationErrorException.class, () -> controller.createRoom(sessionId, request));
+        var request = new CreateRoomRequest(name, secret, roles, days, roleId);
+        assertThrows(ValidationErrorException.class, () -> controller.createRoom(sessionId, request));
     }
 
     @Test
     @DisplayName("Got exception when create room with long secret")
     void testCreateRoomWithLongSecret() {
-        String name = UUID.randomUUID().toString();
-        List<Integer> roles = Collections.singletonList(1);
-        StringBuilder builder = new StringBuilder();
-        for(int i = 0; i <= 128; i++) {
-            builder.append("x");
-        }
-        String secret = builder.toString();
-        int days = 5;
-        int roleId = 1;
+        var name = UUID.randomUUID().toString();
+        var roles = Collections.singletonList(1);
+        var secret = "x".repeat(129);
+        var days = 5;
+        var roleId = 1;
 
-        String sessionId = mockSession(123);
-        User user = mockUser(123);
+        var sessionId = mockSession(123);
+        var user = mockUser(123);
 
-        Room room = new Room();
+        var room = new Room();
 
-        Mockito.when(roomService.createRoom(user, name, secret, roles, days, roleId)).thenReturn(room);
+        when(roomService.createRoom(user, name, secret, roles, days, roleId))
+                .thenReturn(room);
 
-        CreateRoomRequest request = new CreateRoomRequest(name, secret, roles, days, roleId);
-        Assertions.assertThrows(ValidationErrorException.class, () -> controller.createRoom(sessionId, request));
+        var request = new CreateRoomRequest(name, secret, roles, days, roleId);
+        assertThrows(ValidationErrorException.class, () -> controller.createRoom(sessionId, request));
     }
 
     @Test
     @DisplayName("Successfully join to room")
     void testJoin() {
-        String secretCode = UUID.randomUUID().toString();
-        int roomId = 123;
-        int roleId = 321;
+        var secretCode = UUID.randomUUID().toString();
+        var roomId = 123;
+        var roleId = 321;
 
-        String sessionId = mockSession(123);
-        User user = mockUser(123);
+        var sessionId = mockSession(123);
+        var user = mockUser(123);
 
-        Room room = new Room();
+        var room = new Room();
         room.setId(roomId);
 
-        Mockito.when(roomService.joinRoom(user, roomId, roleId, secretCode)).thenReturn(room);
+        when(roomService.joinRoom(user, roomId, roleId, secretCode))
+                .thenReturn(room);
 
-        StandardResponse standardResponse = controller.join(sessionId, new JoinRoomRequest(roomId, roleId, secretCode));
-        Assertions.assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
-        Assertions.assertInstanceOf(JoinRoomResponse.class, standardResponse);
+        var rq = new JoinRoomRequest(roomId, roleId, secretCode);
+        var standardResponse = controller.join(sessionId, rq);
+        assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
 
-        JoinRoomResponse joinRoomResponse = (JoinRoomResponse) standardResponse;
-        Assertions.assertEquals(roomId, joinRoomResponse.getRoomId());
+        var joinRoomResponse = assertInstanceOf(JoinRoomResponse.class, standardResponse);
+        assertEquals(roomId, joinRoomResponse.getRoomId());
     }
 
     @Test
     @DisplayName("Successfully leave to room")
     void testLeave() {
-        int roomId = 123;
+        var roomId = 123;
 
-        String sessionId = mockSession(123);
+        var sessionId = mockSession(123);
         mockUser(123);
 
-        Room room = new Room();
+        var room = new Room();
         room.setId(roomId);
 
-        StandardResponse standardResponse = controller.leave(sessionId, new LeaveRoomRequest(roomId));
-        Assertions.assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
+        var rq = new LeaveRoomRequest(roomId);
+        var standardResponse = controller.leave(sessionId, rq);
+        assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
     }
 
     @Test
     @DisplayName("Successfully vote in room")
     void testVote() {
-        int roomId = 123;
+        var roomId = 123;
         String score = "score";
 
-        String sessionId = mockSession(123);
+        var sessionId = mockSession(123);
         mockUser(123);
 
-        Room room = new Room();
+        var room = new Room();
         room.setId(roomId);
 
-        StandardResponse standardResponse = controller.vote(sessionId, new VoteRoomRequest(roomId, score));
-        Assertions.assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
+        var standardResponse = controller.vote(sessionId, new VoteRoomRequest(roomId, score));
+        assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
     }
 
     @Test
     @DisplayName("Successfully set voting in room")
     void testSetVoting() {
-        int roomId = 123;
-        boolean voting = true;
+        var roomId = 123;
+        var voting = true;
 
-        String sessionId = mockSession(123);
-        User user = mockUser(123);
+        var sessionId = mockSession(123);
+        var user = mockUser(123);
 
-        Room room = new Room();
+        var room = new Room();
         room.setId(roomId);
         room.setAuthor(user);
 
-        Participant participant = new Participant();
+        var participant = new Participant();
         participant.setParticipantId(new ParticipantId(user, room));
         participant.setRole(new Role());
 
-        Mockito.when(roomService.setVoting(user, roomId, voting)).thenReturn(room);
-        Mockito.when(roomService.getParticipants(room)).thenReturn(Collections.singletonList(participant));
+        when(roomService.setVoting(user, roomId, voting))
+                .thenReturn(room);
+        when(roomService.getParticipants(room))
+                .thenReturn(Collections.singletonList(participant));
 
-        StandardResponse standardResponse = controller.setVoting(sessionId, new SetVotingRoomRequest(roomId, voting));
-        Assertions.assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
+        var rq = new SetVotingRoomRequest(roomId, voting);
+        var standardResponse = controller.setVoting(sessionId, rq);
+        assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
 
         GetRoomResponse getRoomResponse = (GetRoomResponse) standardResponse;
-        Assertions.assertEquals(roomId, getRoomResponse.getRoomInfo().getId());
+        assertEquals(roomId, getRoomResponse.getRoomInfo().getId());
     }
 
     @Test
     @DisplayName("Successfully get room info")
     void testGetRoom() {
-        int roomId = 123;
+        var roomId = 123;
 
-        String sessionId = mockSession(123);
-        User user = mockUser(123);
+        var sessionId = mockSession(123);
+        var user = mockUser(123);
 
-        Room room = new Room();
+        var room = new Room();
         room.setId(roomId);
         room.setAuthor(user);
 
-        Participant participant = new Participant();
+        var participant = new Participant();
         participant.setParticipantId(new ParticipantId(user, room));
         participant.setRole(new Role());
 
-        Mockito.when(roomService.getRoom(user, roomId)).thenReturn(room);
-        Mockito.when(roomService.getParticipants(room)).thenReturn(Collections.singletonList(participant));
+        when(roomService.getRoom(user, roomId))
+                .thenReturn(room);
+        when(roomService.getParticipants(room))
+                .thenReturn(Collections.singletonList(participant));
 
-        StandardResponse standardResponse = controller.getRoom(sessionId, new GetRoomRequest(roomId));
-        Assertions.assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
+        var standardResponse = controller.getRoom(sessionId, new GetRoomRequest(roomId));
+        assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
 
-        GetRoomResponse getRoomResponse = (GetRoomResponse) standardResponse;
-        Assertions.assertEquals(roomId, getRoomResponse.getRoomInfo().getId());
+        var getRoomResponse = assertInstanceOf(GetRoomResponse.class, standardResponse);
+        assertEquals(roomId, getRoomResponse.getRoomInfo().getId());
     }
 
     @Test
     @DisplayName("Successfully get room info not for author")
     void testGetRoom_notAuthor() {
-        int roomId = 123;
+        var roomId = 123;
 
-        String sessionId = mockSession(123);
-        User user = mockUser(123);
-        User userOther = mockUser(124);
+        var sessionId = mockSession(123);
+        var user = mockUser(123);
+        var userOther = mockUser(124);
 
-        Room room = new Room();
+        var room = new Room();
         room.setId(roomId);
         room.setAuthor(userOther);
 
-        Participant participantOther = new Participant();
+        var participantOther = new Participant();
         participantOther.setParticipantId(new ParticipantId(userOther, room));
         participantOther.setRole(new Role());
         participantOther.getRole().setId(1);
 
-        Participant participant = new Participant();
+        var participant = new Participant();
         participant.setParticipantId(new ParticipantId(user, room));
         participant.setRole(new Role());
         participant.getRole().setId(1);
 
-        Mockito.when(roomService.getRoom(user, roomId)).thenReturn(room);
-        Mockito.when(roomService.getParticipants(room)).thenReturn(Arrays.asList(participantOther, participant));
+        when(roomService.getRoom(user, roomId))
+                .thenReturn(room);
+        when(roomService.getParticipants(room))
+                .thenReturn(Arrays.asList(participantOther, participant));
 
-        StandardResponse standardResponse = controller.getRoom(sessionId, new GetRoomRequest(roomId));
-        Assertions.assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
+        var standardResponse = controller.getRoom(sessionId, new GetRoomRequest(roomId));
+        assertEquals(ApiResultCode.OK.code, standardResponse.getResultCode());
 
-        GetRoomResponse getRoomResponse = (GetRoomResponse) standardResponse;
-        Assertions.assertEquals(roomId, getRoomResponse.getRoomInfo().getId());
+        var getRoomResponse = assertInstanceOf(GetRoomResponse.class, standardResponse);
+        assertEquals(roomId, getRoomResponse.getRoomInfo().getId());
     }
 
     @Test
     @DisplayName("Not found on get room info")
     void testGetRoom_notFound() {
-        int roomId = 123;
+        var roomId = 123;
 
-        String sessionId = mockSession(123);
-        User user = mockUser(123);
+        var sessionId = mockSession(123);
+        var user = mockUser(123);
 
-        Mockito.when(roomService.getRoom(user, roomId)).thenReturn(null);
+        when(roomService.getRoom(user, roomId))
+                .thenReturn(null);
 
-        GetRoomRequest request = new GetRoomRequest(roomId);
-        Assertions.assertThrows(NotFoundException.class, () -> controller.getRoom(sessionId, request));
+        var request = new GetRoomRequest(roomId);
+        assertThrows(NotFoundException.class, () -> controller.getRoom(sessionId, request));
     }
 
     private String mockSession(long userId) {
-        String sessionId = UUID.randomUUID().toString();
-        ClientSession clientSession = new ClientSession();
+        var sessionId = UUID.randomUUID().toString();
+        var clientSession = new ClientSession();
         clientSession.setSessionId(sessionId);
         clientSession.setUserId(userId);
-        Mockito.when(sessionService.getSession(sessionId)).thenReturn(clientSession);
+        when(sessionService.getSession(sessionId))
+                .thenReturn(clientSession);
         return sessionId;
     }
 
     private User mockUser(long userId) {
-        User user = new User();
+        var user = new User();
         user.setId(userId);
-        Mockito.when(userService.getUser(userId)).thenReturn(user);
+        when(userService.getUser(userId))
+                .thenReturn(user);
         return user;
     }
 }
